Local time zone independence for incoming dates.
- Make sure the provided date is correct for the local time zone, as
  that is what gets sent to Postgres. By default, parsing a date will
  generate a UTC datetime (at 00:00:00) which then is translated to the
  previous day when offset to a western timezone.

--- a/TODO.org
+++ b/TODO.org
@@ -3,7 +3,7 @@
 
 * Tasks
 ** TODO Implement endpoint for creating new expenses
-- [ ] Fix date input to ignore local timezone
+- [X] Fix date input to ignore local timezone
 - [ ] Use yeSQL for interfacing with the database
 ** TODO Add data validation, server side
 - [ ] Add Prismatic Schema for expense schema
