--- a/TODO.org
+++ b/TODO.org
@@ -7,6 +7,10 @@ CLOSED: [2016-03-04 Fri 18:36]
 - [X] Fix date input to ignore local timezone
 - [X] Use Yesql for interfacing with the database
 ** TODO Add data validation, server side
+Analyze if using Schema is the best option; maybe settle for a simpler solution
+like Bouncer. Otherwise, check Clojure Toolbox for other alternatives. Basic
+idea: coerce and validate simultaneaously; return validation errors in some
+standard way as to facilitate rendering.
 - [ ] Add Prismatic Schema for expense schema
 - [ ] Define expense type using schema
 - [ ] Validate incoming new expenses and show validation errors in the browser
@@ -20,6 +24,8 @@ CLOSED: [2016-03-04 Fri 18:36]
 ** TODO Simple UX improvements
 - [ ] Default to today
 - [ ] Suggest categories using a datalist
+** TODO Implement a component architecture
+Maybe use yoyo, or component eventually
 ** TODO Add unit tests
 ** TODO Add a nice style to the page (materializecss.com?)
 ** TODO Allow modifying/deleting expenses
